[package]
name = "ratback"
version = "0.1.1"
edition = "2024"

[lib]
name = "ratback"
path = "src/data.rs"

[dependencies]
axum = "0.8.8"
color-eyre = "0.6.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
